--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@ body {background-color: #fff; margin-top: 20px;}
             </div>
         </div>
     </div>
+    <footer class="mt-5 text-right">
+        <div class="container">
+            <a href="https://github.com/ksbmyk/sketch">&lt;/&gt;</a>
+        </div>
+    </footer>
 </body>
 </html>
