20230513の画像を追加

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ body {background-color: #fff; margin-top: 20px;}
                 <a href="images/20230508.png"><img src ="images/20230508.png" width="250"></a>
             </div>
             <div class="col-md-4">
+                <a href="images/20230513.gif"><img src ="images/20230513.gif" width="250"></a>
             </div>
             <div class="col-md-4">
             </div>
