--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {background-color: #fff; margin-top: 20px;}
         <h2>Creative Coding</h2>
         <div class="row o-3column">
             <div class="col-md-4">
-                <a href="images/20230513.gif"><img src ="images/20230514.png" width="250"></a>
+                <a href="images/20230514.png"><img src ="images/20230514.png" width="250"></a>
             </div>
 
             <div class="col-md-4">
