--- a/index.html
+++ b/index.html
@@ -25,36 +25,35 @@ body {background-color: #fff; margin-top: 20px;}
         <h2>Creative Coding</h2>
         <div class="row o-3column">
             <div class="col-md-4">
-                <a href="images/20230614.png"><img src ="images/20230614.png" width="250"></a>
+                <a href="public/images/20230614.png"><img src ="public/images/20230614.png" width="250"></a>
             </div>
             <div class="col-md-4">
-                <a href="images/20230613.gif"><img src ="images/20230613.gif" width="250"></a>
+                <a href="public/images/20230613.gif"><img src ="public/images/20230613.gif" width="250"></a>
             </div>
             <div class="col-md-4">
-                <a href="images/20230612.png"><img src ="images/20230612.png" width="250"></a>
+                <a href="public/images/20230612.png"><img src ="public/images/20230612.png" width="250"></a>
             </div>
         </div>
         <div class="row o-3column">
             <div class="col-md-4">
-                <a href="images/20230514.png"><img src ="images/20230514.png" width="250"></a>
+                <a href="public/images/20230514.png"><img src ="public/images/20230514.png" width="250"></a>
             </div>
             <div class="col-md-4">
-                <a href="images/20230513.gif"><img src ="images/20230513.gif" width="250"></a>
+                <a href="public/images/20230513.gif"><img src ="public/images/20230513.gif" width="250"></a>
             </div>
             <div class="col-md-4">
-                <a href="images/20230508.png"><img src ="images/20230508.png" width="250"></a>
+                <a href="public/images/20230508.png"><img src ="public/images/20230508.png" width="250"></a>
             </div>
         </div>
         <div class="row o-3column">
             <div class="col-md-4">
-                <a href="images/20230506.png"><img src ="images/20230506.png" width="250"></a>
+                <a href="public/images/20230506.png"><img src ="public/images/20230506.png" width="250"></a>
             </div>
-
              <div class="col-md-4">
-                <a href="images/20230505.png"><img src ="images/20230505.png" width="250"></a>
+                <a href="public/images/20230505.png"><img src ="public/images/20230505.png" width="250"></a>
             </div>
             <div class="col-md-4">
-                <a href="images/20230312.png"><img src ="images/20230312.png" width="250"></a>
+                <a href="public/images/20230312.png"><img src ="public/images/20230312.png" width="250"></a>
             </div>
         </div>
     </div>
