--- a/public/js/20240115.html
+++ b/public/js/20240115.html
@@ -14,7 +14,6 @@
                     const Engine = Matter.Engine;
                     const World = Matter.World;
                     const Bodies = Matter.Bodies;
-                    const Events = Matter.Events;
 
                     let engine;
                     let world;
@@ -34,15 +33,6 @@
 
                         // 初期の円を追加
                         setInterval(addCircle, 500); // 0.5秒ごとに円を追加
-
-                        // 衝突イベントのリスナーを追加
-                        Events.on(engine, 'collisionStart', function(event) {
-                            let pairs = event.pairs;
-                            for (let i = 0; i < pairs.length; i++) {
-                            let pair = pairs[i];
-                            handleCollision(pair.bodyA, pair.bodyB);
-                            }
-                        });
                     }
 
                     function draw() {
@@ -71,34 +61,11 @@
 
                     function addCircle() {
                         // ランダムな位置に円を追加
-                        const circle = Bodies.circle(random(width/2-50, width/2+50), -50, 20, { restitution: 0.8 });
+                        const circle = Bodies.circle(random(width / 2 - 50, width / 2 + 50), -50, 20, { restitution: 0.8 });
                         // ボックスの初速度を大きくする
                         circle.velocity.y = 5; // Y軸方向への初速度
                         World.add(world, circle);
                         circles.push(circle);
-                    }
-
-                    function handleCollision(bodyA, bodyB) {
-                        // 衝突した二つの物体が円であれば反発係数を考慮して速度を調整
-                        if (bodyA.circleRadius && bodyB.circleRadius) {
-                            let restitution = 0.8; // 反発係数
-                            let normal = { x: bodyB.position.x - bodyA.position.x, y: bodyB.position.y - bodyA.position.y };
-                            let magnitude = Math.sqrt(normal.x * normal.x + normal.y * normal.y);
-                            normal.x /= magnitude;
-                            normal.y /= magnitude;
-
-                            let relativeVelocity = { x: bodyB.velocity.x - bodyA.velocity.x, y: bodyB.velocity.y - bodyA.velocity.y };
-                            let speedAlongNormal = relativeVelocity.x * normal.x + relativeVelocity.y * normal.y;
-
-                            let impulse = (2 * speedAlongNormal) / (1 / bodyA.circleRadius + 1 / bodyB.circleRadius);
-                            impulse *= restitution;
-
-                            bodyA.velocity.x -= impulse * normal.x / bodyA.circleRadius;
-                            bodyA.velocity.y -= impulse * normal.y / bodyA.circleRadius;
-
-                            bodyB.velocity.x += impulse * normal.x / bodyB.circleRadius;
-                            bodyB.velocity.y += impulse * normal.y / bodyB.circleRadius;
-                        }
                     }
                 </script>        
             </div>
