--- a/public/js/20240131.html
+++ b/public/js/20240131.html
@@ -4,7 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <meta charset="utf-8" />
-    <title>20240115</title>
+    <title>20240131</title>
   </head>
   <body>
     <div>
@@ -40,6 +40,7 @@ function draw() {
   // 確率3%で音を呼び出す
   if (random(1) < 0.03) {
     playSound();
+    displayCircle();
   }
 }
 
@@ -57,6 +58,14 @@ function envelope(sound, a, b, c) {
   sound.amp(a, 0.01);
   sound.amp(b, decayTime);
   sound.amp(c, releaseTime);
+}
+
+function displayCircle() {
+  let x = random(width);
+  let y = random(height);
+  let diameter = random(20, 100);
+  fill(random(255), random(255), random(255));
+  ellipse(x, y, diameter);
 }
                 </script>        
             </div>
