--- a/public/js/20240130.html
+++ b/public/js/20240130.html
@@ -14,6 +14,7 @@
 // GENUARY 2024 jan30 Shaders.
 // https://genuary.art/prompts
 // ref https://gin-graphic.hatenablog.com/entry/2020/12/01/174242
+// ref https://wgld.org/d/webgl/w008.html
 
 let vs = `
    precision highp float;
