--- a/public/js/20240131.html
+++ b/public/js/20240131.html
@@ -11,7 +11,7 @@
         <div>
             <div>
                 <script>
-// GENUARY 2024 jan31 Generative music / Generative audio / Generative sound..
+// GENUARY 2024 jan31 Generative music / Generative audio / Generative sound.
 // https://genuary.art/prompts
 
 let osc;
