--- a/public/events/rubykaigi2024.html
+++ b/public/events/rubykaigi2024.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
     <script type="text/ruby" src="../p5.rb"></script>
     <script type="text/ruby" serc="../programs/20240516.rb"></script>
-    P5::init()
+    <script type="text/ruby">P5::init()</script> 
   </head>
   <body>
     <main>
