--- a/public/events/mau.html
+++ b/public/events/mau.html
@@ -8,6 +8,8 @@
       margin: 0;
       display: flex;
       font-family: Arial, sans-serif;
+      overflow-x: hidden; /* 横スクロールを無効化 */
+      max-width: 100vw; /* 画面幅を超えないように */
     }
     #code-container {
       width: 50%;
@@ -139,6 +141,7 @@
     let isDarkMode, circleCount, circleSize, hueValue, alphaValue, distance;
 
     const sketch = (p) => {
+      let scaleFactor = 1;
       p.setup = () => {
         p.createCanvas(p.windowWidth/2, p.windowWidth/2);
         p.colorMode(p.HSB, 360, 100, 100, 255);
@@ -165,6 +168,15 @@
           p.circle(x, y, circleSize + (i % 2 === 0 ? 30 : -30));
         }
       };
+
+      p.windowResized = () => {
+        p.resizeCanvas(p.windowWidth / 2, p.windowWidth / 2);
+        updateScaleFactor();
+      };
+
+      function updateScaleFactor() {
+        scaleFactor = p.constrain(p.windowWidth / 1000, 0.5, 1); // 最小0.5倍, 最大1倍
+      }
     };
 
     window.onload = () => {
@@ -208,7 +220,7 @@
 
       circleCountSlider.addEventListener("input", (event) => {
         circleCount = Number(event.target.value);
-        document.getElementById("circleCountValue").textContent = circleCount;
+        document.getElementById("countValue").textContent = circleCount;
       });
 
       circleSizeSlider.addEventListener("input", (event) => {
