--- a/public/events/genuary2026.html
+++ b/public/events/genuary2026.html
@@ -59,8 +59,8 @@
     <div class="grid-item"><img src="../images/20260127.gif" alt="Image 27"></div>
     <div class="grid-item"><img src="../images/20260128.gif" alt="Image 28"></div>
     <div class="grid-item"><img src="../images/20260129.gif" alt="Image 29"></div>
-    <div class="grid-item"><img src="../images/20260130.png" alt="Image 30"></div>
-    <div class="grid-item"><img src="../images/20260131.png" alt="Image 31"></div>
+    <div class="grid-item"><img src="../images/20260130.gif" alt="Image 30"></div>
+    <div class="grid-item"><img src="../images/20260131.gif" alt="Image 31"></div>
     <!-- 以下同様に続く -->
     <!-- 画像のパスは実際のファイル名に置き換えてください -->
   </div>
